wisecow/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: wisecow-ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-
target: /
  cert-manager.io/cluster-issuer:
"letsencrypt-prod" 
spec: 
  tls:
  - hosts:
    - your-domain.com
    secretName: tls-secret 
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: wisecow-service
            port: 
              number: 80
